# codex

./: .gitignore  Dockerfile  README.md  codex-dockerhub-instructions.txt  docker-compose.services.yml  ellipsis.yaml  htmlTemplates.py  pre-commit-config.yaml  pyproject.toml  streamlit_app.py
scripts/: update_poetry_lock.sh
